# worksheet-generator

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.http
math-worksheet-generator/: main.py
math-worksheet-generator/static/: index.html
