[project]
name = "add-sub-sheets"
version = "0.1.0"
description = ""
authors = [
    {name = "Libor VotoÄek",email = "voty@voty.eu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "reportlab (>=4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
